Fix incorrectly wrapping element

--- a/core/sass/components/_language-selector.scss
+++ b/core/sass/components/_language-selector.scss
@@ -174,7 +174,7 @@
 
     span {
       @include body-s;
-      display: inline-block;
+      display: block;
       max-width: 215px;
       padding-top: $spacing-4;
     }
